--- a/Spam Email/spam_email.ipynb
+++ b/Spam Email/spam_email.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "8ed373d5",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "# necessary libaries\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer # make text data vectorize\n",
     "from sklearn.linear_model import LogisticRegression # ml model\n",
+    "from sklearn.svm import SVC # ml model\n",
     "from sklearn.model_selection import train_test_split # split data for train & test\n",
     "from sklearn.metrics import accuracy_score # test the accuracy\n",
     "import pandas as pd # load csv\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "384be2b8",
    "metadata": {},
    "outputs": [
